#140: Updates to compile and run with Java 21
This includes multiple updates which are all inter-dependent, including a new JavaFX (#141), a new Netbeans (#143), and new HEC libraries (#144). These changes cannot be isolated, as all of these are cricial components that must support Java 21 to compile and run with Java 21.